[package]
name = "behavior-tree-lite"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
once_cell = "1.16.0"
serde = "1.0.136"
serde_yaml = "0.8.23"

[dev-dependencies]
anyhow = "1.0.57"
