[package]
name = "behavior-tree-lite"
version = "0.3.1"
edition = "2018"
author = ["msakuta <msakuta960@gmail.com>"]
description = "A minimal behavior tree implementation"
license = "MIT"
repository = "https://github.com/msakuta/rusty-behavior-tree-lite"
exclude = ["vscode-ext/*", ".github/*"]

[dependencies]
nom = "7.1.1"
once_cell = "1.16.0"
serde = "1.0.136"
serde_yaml = "0.8.23"

[dev-dependencies]
anyhow = "1.0.57"
